[gd_scene load_steps=2 format=2]

[ext_resource path="res://Interactables/ElevatorButtons.gd" type="Script" id=1]

[node name="ElevatorButtons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -90.0
margin_right = 54.0
margin_bottom = 89.0
color = Color( 0.333333, 0.333333, 0.333333, 1 )

[node name="GButton" type="Button" parent="."]
margin_left = 136.0
margin_top = 152.0
margin_right = 156.0
margin_bottom = 172.0

[node name="ColorRect" type="ColorRect" parent="GButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 0.811765, 0.988235, 1, 0.52549 )

[node name="1Button" type="Button" parent="."]
margin_left = 184.0
margin_top = 152.0
margin_right = 204.0
margin_bottom = 172.0

[node name="ColorRect" type="ColorRect" parent="1Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="2Button" type="Button" parent="."]
margin_left = 136.0
margin_top = 128.0
margin_right = 156.0
margin_bottom = 148.0

[node name="ColorRect" type="ColorRect" parent="2Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="3Button" type="Button" parent="."]
margin_left = 184.0
margin_top = 128.0
margin_right = 204.0
margin_bottom = 148.0

[node name="ColorRect" type="ColorRect" parent="3Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="4Button" type="Button" parent="."]
margin_left = 136.0
margin_top = 104.0
margin_right = 156.0
margin_bottom = 124.0

[node name="ColorRect" type="ColorRect" parent="4Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="5Button" type="Button" parent="."]
margin_left = 184.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 124.0

[node name="ColorRect" type="ColorRect" parent="5Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="6Button" type="Button" parent="."]
margin_left = 136.0
margin_top = 80.0
margin_right = 156.0
margin_bottom = 100.0

[node name="ColorRect" type="ColorRect" parent="6Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="7Button" type="Button" parent="."]
margin_left = 184.0
margin_top = 80.0
margin_right = 204.0
margin_bottom = 100.0

[node name="ColorRect" type="ColorRect" parent="7Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="8Button" type="Button" parent="."]
margin_left = 136.0
margin_top = 56.0
margin_right = 156.0
margin_bottom = 76.0

[node name="ColorRect" type="ColorRect" parent="8Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="9Button" type="Button" parent="."]
margin_left = 184.0
margin_top = 56.0
margin_right = 204.0
margin_bottom = 76.0

[node name="ColorRect" type="ColorRect" parent="9Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="10Button" type="Button" parent="."]
margin_left = 136.0
margin_top = 32.0
margin_right = 156.0
margin_bottom = 52.0

[node name="ColorRect" type="ColorRect" parent="10Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="11Button" type="Button" parent="."]
margin_left = 184.0
margin_top = 32.0
margin_right = 204.0
margin_bottom = 52.0

[node name="ColorRect" type="ColorRect" parent="11Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="12Button" type="Button" parent="."]
margin_left = 136.0
margin_top = 8.0
margin_right = 156.0
margin_bottom = 28.0

[node name="ColorRect" type="ColorRect" parent="12Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="13Button" type="Button" parent="."]
margin_left = 184.0
margin_top = 8.0
margin_right = 204.0
margin_bottom = 28.0

[node name="ColorRect" type="ColorRect" parent="13Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 1
color = Color( 1, 0.992157, 0.811765, 0.52549 )

[node name="G" type="Label" parent="."]
margin_left = 117.0
margin_top = 156.0
margin_right = 133.0
margin_bottom = 170.0
text = "G"
align = 2

[node name="1" type="Label" parent="."]
margin_left = 165.0
margin_top = 156.0
margin_right = 181.0
margin_bottom = 170.0
text = "1"
align = 2

[node name="2" type="Label" parent="."]
margin_left = 116.0
margin_top = 132.0
margin_right = 132.0
margin_bottom = 146.0
text = "2"
align = 2

[node name="3" type="Label" parent="."]
margin_left = 165.0
margin_top = 132.0
margin_right = 181.0
margin_bottom = 146.0
text = "3"
align = 2

[node name="4" type="Label" parent="."]
margin_left = 116.0
margin_top = 108.0
margin_right = 132.0
margin_bottom = 122.0
text = "4"
align = 2

[node name="5" type="Label" parent="."]
margin_left = 165.0
margin_top = 108.0
margin_right = 181.0
margin_bottom = 122.0
text = "5"
align = 2

[node name="6" type="Label" parent="."]
margin_left = 116.0
margin_top = 84.0
margin_right = 132.0
margin_bottom = 98.0
text = "6"
align = 2

[node name="7" type="Label" parent="."]
margin_left = 165.0
margin_top = 84.0
margin_right = 181.0
margin_bottom = 98.0
text = "7"
align = 2

[node name="8" type="Label" parent="."]
margin_left = 116.0
margin_top = 60.0
margin_right = 132.0
margin_bottom = 74.0
text = "8"
align = 2

[node name="9" type="Label" parent="."]
margin_left = 165.0
margin_top = 60.0
margin_right = 181.0
margin_bottom = 74.0
text = "9"
align = 2

[node name="10" type="Label" parent="."]
margin_left = 117.0
margin_top = 36.0
margin_right = 133.0
margin_bottom = 50.0
text = "10"
align = 2

[node name="11" type="Label" parent="."]
margin_left = 166.0
margin_top = 36.0
margin_right = 182.0
margin_bottom = 50.0
text = "11"
align = 2

[node name="12" type="Label" parent="."]
margin_left = 117.0
margin_top = 12.0
margin_right = 133.0
margin_bottom = 26.0
text = "12"
align = 2

[node name="13" type="Label" parent="."]
margin_left = 165.0
margin_top = 12.0
margin_right = 181.0
margin_bottom = 26.0
text = "13"
align = 2

[connection signal="pressed" from="GButton" to="." method="_on_GButton_pressed"]
[connection signal="pressed" from="1Button" to="." method="_on_1Button_pressed"]
[connection signal="pressed" from="2Button" to="." method="_on_2Button_pressed"]
[connection signal="pressed" from="3Button" to="." method="_on_3Button_pressed"]
[connection signal="pressed" from="4Button" to="." method="_on_4Button_pressed"]
[connection signal="pressed" from="5Button" to="." method="_on_5Button_pressed"]
[connection signal="pressed" from="6Button" to="." method="_on_6Button_pressed"]
[connection signal="pressed" from="7Button" to="." method="_on_7Button_pressed"]
[connection signal="pressed" from="8Button" to="." method="_on_8Button_pressed"]
[connection signal="pressed" from="9Button" to="." method="_on_9Button_pressed"]
[connection signal="pressed" from="10Button" to="." method="_on_10Button_pressed"]
[connection signal="pressed" from="11Button" to="." method="_on_11Button_pressed"]
[connection signal="pressed" from="12Button" to="." method="_on_12Button_pressed"]
[connection signal="pressed" from="13Button" to="." method="_on_13Button_pressed"]
